@@ -8,7 +8,14 @@
 
 using namespace zeek::packet_analysis::IP;
 
-void SessionAdapter::Done() { Analyzer::Done(); }
+void SessionAdapter::Done() {
+    Analyzer::Done();
+    for ( const auto& ta : tap_analyzers )
+        ta->Done();
+
+    // Ensure no more TapPacket() calls after Done() on TapAnalyzer instances.
+    tap_analyzers.clear();
+}
 
 bool SessionAdapter::IsReuse(double t, const u_char* pkt) { return parent->IsReuse(t, pkt); }
 
@@ -27,4 +34,38 @@ void SessionAdapter::PacketContents(const u_char* data, int len) {
         auto contents = make_intrusive<StringVal>(cbs);
         EnqueueConnEvent(packet_contents, ConnVal(), std::move(contents));
     }
+}
+
+void SessionAdapter::AddTapAnalyzer(TapAnalyzerPtr ta) {
+    assert(! IsFinished());
+    tap_analyzers.push_back(std::move(ta));
+    tap_analyzers.back()->Init();
+}
+
+bool SessionAdapter::RemoveTapAnalyzer(const TapAnalyzer* ta) {
+    // Find the raw pointer, call Done(), remove it, thereby destructing it.
+    for ( auto it = tap_analyzers.begin(); it != tap_analyzers.end(); ++it ) {
+        if ( it->get() == ta ) {
+            // Ensure Done() is called only after removal from tap_analyzers.
+            auto ptr{std::move(*it)};
+            tap_analyzers.erase(it);
+            ptr->Done();
+            ptr.reset();
+            return true;
+        }
+    }
+
+    return false;
+}
+
+void SessionAdapter::TapPacket(const Packet* pkt, PacketAction action, SkipReason skip_reason) const {
+    for ( const auto& ta : tap_analyzers )
+        ta->TapPacket(*pkt, action, skip_reason);
+}
+
+void SessionAdapter::UpdateConnVal(RecordVal* conn_val) {
+    Analyzer::UpdateConnVal(conn_val);
+
+    for ( const auto& ta : tap_analyzers )
+        ta->UpdateConnVal(conn_val);
 }
